# goit-pyweb-hw-13

part1/web-13/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
part1/web-13/migrations/: env.py
part1/web-13/migrations/versions/: 7c327500f4ec_.py  892a7ebf3fb0_.py  bbb975d61627_init.py
part1/web-13/src/: schemas.py
part1/web-13/src/conf/: config.py
part1/web-13/src/database/: db.py  models.py
part1/web-13/src/repository/: contacts.py  users.py
part1/web-13/src/routes/: auth.py  contacts.py  users.py
part1/web-13/src/services/: auth.py  cloudinary_service.py  email.py
project-10-part2/: pyproject.toml
project-10-part2/quote/: manage.py  migrate_from_mongo.py
project-10-part2/quote/quote/: asgi.py  settings.py  urls.py  wsgi.py
project-10-part2/quote/quoteapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
project-10-part2/quote/quoteapp/migrations/: 0001_initial.py
project-10-part2/quote/quoteapp/static/quoteapp/: style.css
project-10-part2/quote/quoteapp/templates/quoteapp/: author.html  base.html  detail.html  index.html  quote.html  tag.html
project-10-part2/quote/quoteapp/templatetags/: extract_tags.py
project-10-part2/quote/users/: forms.py  models.py  signals.py  urls.py  views.py
project-10-part2/quote/users/migrations/: 0001_initial.py
project-10-part2/quote/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  signup.html
