[project]
name = "project-10"
version = "0.1.0"
description = ""
authors = [
    {name = "yali"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
