[project]
name = "web-13"
version = "0.1.0"
description = ""
authors = [
    {name = "Yulia"}
]
#readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fastapi-limiter (==0.1.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
